--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
+    "@tanstack/react-query": "^5.66.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
