--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
 VITE_NEWS_API_KEY="a85611ba-364f-4d29-8181-83923f6721f0"
+VITE_NEWS_API_BASE_URL="https://eventregistry.org/api/v1"
+
+
 VITE_NEWS_API_ORG_KEY="1e4d714851bd475987800fbd815875aa"
-VITE_GUARDIANS_KEY="3d45b88b-68c6-4a0e-aabd-8ff0ac2e6f17"
+
+
+VITE_GUARDIAN_API_KEY="3d45b88b-68c6-4a0e-aabd-8ff0ac2e6f17"
+
+# Feature Flags
+VITE_FF_USE_NEWS_API="true"
+VITE_FF_USE_NEWS_API_ORG="false"
+VITE_FF_USE_GUARDIAN_API="false"
