--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
-VITE_NEWS_API_KEY="a85611ba-364f-4d29-8181-83923f6721f0"
 VITE_NEWS_API_BASE_URL="https://eventregistry.org/api/v1"
+VITE_NEWS_API_KEY="a85611ba-364f-4d29-8181-83923f6721f0"
 
 
-VITE_NEWS_API_ORG_KEY="8974a7c5ae264a7a82c1b9c5a7cadeb8"
 VITE_NEWS_API_ORG_BASE_URL="https://newsapi.org/v2"
+VITE_NEWS_API_ORG_KEY="0182423da7f4464a8a7240fc492a2b24"
 
 
-VITE_GUARDIAN_API_KEY="3d45b88b-68c6-4a0e-aabd-8ff0ac2e6f17"
+VITE_GUARDIAN_BASE_URL="https://content.guardianapis.com"
+# VITE_GUARDIAN_KEY="3d45b88b-68c6-4a0e-aabd-8ff0ac2e6f17"
+VITE_GUARDIAN_KEY="test"
 
 # Feature Flags
-VITE_FF_USE_NEWS_API="true"
+VITE_FF_USE_NEWS_API="false"
 VITE_FF_USE_NEWS_API_ORG="true"
-VITE_FF_USE_GUARDIAN_API="true"
+VITE_FF_USE_GUARDIAN_API="false"
