style: some styling

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,6 @@ VITE_GUARDIAN_BASE_URL="https://content.guardianapis.com"
 VITE_GUARDIAN_KEY="test"
 
 # Feature Flags
-VITE_FF_USE_NEWS_API="false"
+VITE_FF_USE_NEWS_API="true"
 VITE_FF_USE_NEWS_API_ORG="true"
-VITE_FF_USE_GUARDIAN_API="false"
+VITE_FF_USE_GUARDIAN_API="true"
