--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 VITE_NEWS_API_BASE_URL="https://eventregistry.org/api/v1"
 VITE_NEWS_API_KEY="a85611ba-364f-4d29-8181-83923f6721f0"
+# VITE_NEWS_API_KEY="2c3f16a1-5196-40b9-ab3b-4036223e1938"
 
 
 VITE_NEWS_API_ORG_BASE_URL="https://newsapi.org/v2"
@@ -7,8 +8,8 @@ VITE_NEWS_API_ORG_KEY="0182423da7f4464a8a7240fc492a2b24"
 
 
 VITE_GUARDIAN_BASE_URL="https://content.guardianapis.com"
-# VITE_GUARDIAN_KEY="3d45b88b-68c6-4a0e-aabd-8ff0ac2e6f17"
 VITE_GUARDIAN_KEY="test"
+# VITE_GUARDIAN_KEY="3d45b88b-68c6-4a0e-aabd-8ff0ac2e6f17"
 
 # Feature Flags
 VITE_FF_USE_NEWS_API="true"
