--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ VITE_NEWS_API_KEY="a85611ba-364f-4d29-8181-83923f6721f0"
 
 VITE_NEWS_API_ORG_BASE_URL="https://newsapi.org/v2"
 VITE_NEWS_API_ORG_KEY="0182423da7f4464a8a7240fc492a2b24"
+# VITE_NEWS_API_ORG_KEY="e3c0800b8a244f0fbbd63e5e988d3274"
 
 
 VITE_GUARDIAN_BASE_URL="https://content.guardianapis.com"
@@ -15,3 +16,5 @@ VITE_GUARDIAN_KEY="test"
 VITE_FF_USE_NEWS_API="true"
 VITE_FF_USE_NEWS_API_ORG="true"
 VITE_FF_USE_GUARDIAN_API="true"
+
+VITE_MAX_POSTS_PER_API_REQUEST=1
