--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.66.9",
+    "@tanstack/react-virtual": "^3.13.2",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.8.0",
     "react": "^18.2.0",
